--- a/.env
+++ b/.env
@@ -19,3 +19,17 @@ APP_SECRET=a4f6d3e4aad4ed08a5d1b208eda4ed9b
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL="mysql://acommerce:acommerce@db:3306/acommerce?serverVersion=5.7"
+###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=84b3fb8096d5c683bb07d34d65af4390
+###< lexik/jwt-authentication-bundle ###
+
+EXCHANGE_RATE_API_KEY="0a1b2b037531235ffd5fc2c26a29836e"
