--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,9 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+        bind:
+            $exchangeRateApiKey: '%env(EXCHANGE_RATE_API_KEY)%'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -29,3 +32,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Doctrine\Persistence\ObjectManager: '@doctrine.orm.default_entity_manager'
